@@ -1,8 +1,9 @@
-1/1/2015 Oleg Moskalenko <mom040267@gmail.com>
+1/12/2015 Oleg Moskalenko <mom040267@gmail.com>
 Version 4.4.1.1 'Ardee West':
 	- https admin server;
 	- SSLv2 support removed;
-	- The server-side short-term credentials mechanism support removed; 
+	- The server-side short-term credentials mechanism support removed;
+	- OpenSSL 1.1.0 supported;
 
 12/24/2014 Oleg Moskalenko <mom040267@gmail.com>
 Version 4.3.3.1 'Tolomei':
